prover-ray/zkcdriver/testdata/synced/invalid/basic_12.zkc
//error:3:8-14:invalid expression
fn f(x:u8) -> (r:u8) {
  r = (x == 1)
  return
}
